@@ -9,6 +9,9 @@
 - added missing `headers` argument in the `res.jsonstring(data, [headers])` method
 - improved code in the `U.extend_headers()` and `U.extend_headers2()` methods
 - fixed setting values `0`, `false` and `null` in `FlowStreamMessage.send()` method <https://github.com/totaljs/flow/issues/108>
+- extended `LOADRESOURCE()` method
+	- `LOADRESOURCE(url)` for downloading multiple localizations
+	- `LOADRESOURCE(name, url)` for downloading single localization
 
 ========================
 0.0.89
